Story Ribbon: Fix animation on iOS, refactoring

--- a/src/components/left/main/LeftMain.scss
+++ b/src/components/left/main/LeftMain.scss
@@ -16,23 +16,6 @@
     flex-direction: column;
     overflow: hidden;
 
-    &.withStoryRibbon {
-      --story-ribbon-height: 5.5rem;
-      &.shown {
-        transform: translateY(calc(var(--story-ribbon-height) * -1));
-        height: calc(100% + var(--story-ribbon-height));
-        transition: none;
-      }
-
-      &.open, &.closing {
-        transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      }
-
-      &.open {
-        transform: translateY(0);
-      }
-    }
-
     .tabs-placeholder {
       height: 2.625rem;
       /* stylelint-disable-next-line plugin/no-low-performance-animation-properties */
